<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OpenWA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/phone_number_acc_label"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/openwabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_what_s_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        tools:ignore="MissingConstraints"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewcoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/coded_and_developed_by_yashjariwala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openwabutton"
        app:layout_constraintVertical_bias="0.593"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageViewwa"
        android:layout_width="148dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/wlogo"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contrycodeinstructions"
        app:layout_constraintBottom_toTopOf="@+id/openwabutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintVertical_bias="0.54"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        app:layout_constraintBottom_toTopOf="@+id/openwabutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.538"
        android:textSize="19sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>